--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -26,6 +26,11 @@
   width: auto;
   background: var(--color-background);
   border-radius: 5px;
+  transition: opacity 0.2s ease;
+
+  &:hover {
+    opacity: 0.7; /* 透明度 */
+  }
 }
 
 .menu {
@@ -33,16 +38,33 @@
   gap: 20px;
 }
 
+/* メニューリンクのスタイル設定 */
 .menuLink {
-  color: white;
   text-decoration: none;
+  position: relative;  /* アンダーライン位置 */
   font-weight: 700;
   padding: 8px 12px;
   border-radius: 4px;
   transition: all 0.3s ease;
 
-  &:hover {
-    background-color: var(--color-primary-hover);
-    transform: translateY(-2px);
+  &::after {
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-accent);
+    bottom: -1px;
+    transform: scale(0, 1);
+    transform-origin: left top;
+    transition: transform 0.3s;
+
+  }
+  &:hover::after {
+    transform: scale(1,1);
+  }
+
+  &:active {
+    color:var(--color-accent);
   }
 }
