--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 60px;
   gap: 15px;
-  padding: 0 20px;
+  padding: 0px 20px; /* 上下:0px 左右:20px */
   background: var(--color-primary);
   z-index: 100;
 }
@@ -41,7 +41,7 @@
 /* メニューリンクのスタイル設定 */
 .menuLink {
   text-decoration: none;
-  position: relative;  /* アンダーライン位置 */
+  position: relative; /* アンダーライン位置 */
   font-weight: 700;
   padding: 8px 12px;
   border-radius: 4px;
@@ -50,7 +50,7 @@
   &::after {
     position: absolute;
     left: 0;
-    content: '';
+    content: "";
     width: 100%;
     height: 3px;
     background-color: var(--color-accent);
@@ -58,13 +58,12 @@
     transform: scale(0, 1);
     transform-origin: left top;
     transition: transform 0.3s;
-
   }
   &:hover::after {
-    transform: scale(1,1);
+    transform: scale(1, 1);
   }
 
   &:active {
-    color:var(--color-accent);
+    color: var(--color-accent);
   }
 }
