--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,17 +1,19 @@
-
 .container {
   display: grid;
   grid-template-rows: auto 1fr 40px;
-  min-height: 100vh;    /* 画面1ページ分 */
+  min-height: 100vh; /* 画面1ページ分 */
   padding: 10px;
   gap: 20px;
 }
 
 .main {
+  padding-top: 60px; /* ヘッダー60px */
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 40px;
 }
 
 /* レスポンシブ対応 TODO:暫定 */
